--- a/prayerTime.css
+++ b/prayerTime.css
@@ -9,13 +9,17 @@ body {
     margin: 0;
     padding: 0;
     font-size: calc(14px + 0.5vw);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .content {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 40vw;
+    height: 10vw;
     /* background-color: antiquewhite; */
 }
 
@@ -32,19 +36,28 @@ body {
     right:0;
 }
 
+table{
+    margin-top: 10px;
+}
+
+input {
+    padding: 4px;
+}
 .schedule {
-    background-color: rgb(85, 170, 212);
+    background-color: rgb(41, 119, 158);
     height: 40vw;
     width: 50%;
-    margin: 10px 0;
+    /* margin: 10px 0; */
     border: 1px solid rgb(0, 0, 0);
-    justify-content: center;
+    overflow: hidden;
     text-align: center;
-    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 label{
     display:inline-block;
+    margin-right: 10px;
 }
 
 .currentLoc {
