--- a/qfStyle.css
+++ b/qfStyle.css
@@ -57,3 +57,12 @@
   display: flex;
   justify-content: center;
 }
+.compassContainer {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#compass {
+  width: 100px;
+  height: 100px;
+}
