--- a/time-contnt.css
+++ b/time-contnt.css
@@ -9,6 +9,10 @@
   right: 0;
 }
 
+.left-top1 {
+    margin-top:0;
+}
+
 .middle-content hr {
   border: solid 1px;
   width: 96%;
@@ -17,4 +21,5 @@
 
 * {
   font-family: Arial, Helvetica, sans-serif;
+  
 }
