--- a/prayerTime.css
+++ b/prayerTime.css
@@ -1,6 +1,10 @@
+html {
+    height: 100%;
+    background: linear-gradient(to bottom, #1A4D2E, #E8DFCA) no-repeat fixed;
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
     display: flex;
@@ -8,39 +12,39 @@ body {
     align-items: center;
 }
 
-.content {
+.top {
     display: flex;
     flex-direction: row;
-}
-
-
-.top{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    align-items: center;
     border-bottom: 3px solid rgb(0, 0, 0);
     width: 90vw;
-    /* position: relative; */
     margin: 4vw;
     overflow: hidden;
 }
 
-.top .left {
+.left {
     width: 50%;
+    padding: 3vw;
+    color: white;
+    display: flex;
+    align-items: center; /* Centering h1 vertically */
 }
 
-#time{
-    width: 100%;
+.right {
+    width: 50%;
+    padding: 3vw;
+    /* background-color: #000000; */
+    display: flex;
+    justify-content: flex-end; /* Pushing time to the end */
+    align-items: center; /* Centering h1 vertically */
 }
 
-.right  {
-    width: 50%;
-    text-align: end;
+#time {
+    color: white; /* Ensure time is visible against the black background */
 }
-.left h1 .right h1 {
-    margin: 0;
-    font-size: 4vh;
-    width: 100%;
+
+h1 {
+    text-shadow: 2px 2px 10px #000000;
 }
 
 .schedule {
@@ -60,7 +64,6 @@ body {
 
 #city {
     width: 100%;
-    max-width: 300px;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -69,7 +72,7 @@ body {
 
 button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #4F6F52;
     color: white;
     border: none;
     border-radius: 4px;
@@ -78,7 +81,8 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #E8DFCA;
+    color: black;
 }
 
 table {
@@ -89,7 +93,6 @@ table {
 
 td {
     padding: 10px;
-    /* border: 1px solid #ccc; */
     text-align: center;
 }
 
@@ -113,22 +116,14 @@ td {
     color: #3b4046;
 }
 
-.currentLoc {
-    margin-top: 20px;
+.resultPray {
+    background-color: #F5EFE6;
+    padding: 5vh;
+    border-radius: 10px;
 }
 
 .currentLoc {
     margin-top: 20px;
-}
-
-.loc {
-    border-radius: 20px;
-    background-color: #0056b3;
-    padding: 10px;
-}
-
-.loc:hover {
-    background-color: #ccc;
 }
 
 .currentLoc {
@@ -136,17 +131,30 @@ td {
     flex-direction: column;
 }
 
+.loc {
+    border-radius: 20px;
+    background-color: #4F6F52;
+    padding: 10px;
+    margin-bottom: 5vh;
+}
+
+.loc:hover {
+    background-color: #E8DFCA;
+    color: black;
+}
+
 #result {
-  border-bottom: 1px solid #222222;
+    border-bottom: 1px solid #222222;
 }
 
 #share {
     border-radius: 20px;
 }
-@media (max-width: 768px) {
+
+@media (max-width: 600px) {
     .top {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .left h1, .right h1 {
