--- a/qfStyle.css
+++ b/qfStyle.css
@@ -12,6 +12,7 @@
   display: flex;
   /* flex-direction: row; */
   justify-content: space-around;
+  align-items: center;
   /* margin: 0% 12%; */
   margin: 20px;
 }
@@ -25,9 +26,10 @@
 
 .qiblaInfo {
   /* float: right; */
-  padding: 30px;
-  background-color: rgb(211, 211, 211);
-  width: 300px;
+  padding: 20px;
+  color: #fffcfc;
+  background-color: #4f6f52;
+  width: 230px;
   height: 100px;
   border-radius: 10px;
   right: 40px;
@@ -49,11 +51,14 @@
 
 #GetQiblaAutoButton:hover {
   background-color: rgb(213, 210, 210);
+  color: #4f6f52;
 }
 
 #map {
   height: 500px;
   width: 60vw;
+
+  margin-top: 80px;
 }
 
 .bottomContent {
@@ -64,4 +69,45 @@ hr {
   border: solid 1px;
   width: 96%;
   margin: 2% 10% 2% 2%;
+}
+#qibla-direction {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .topContent {
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+
+    /* margin: 0% 12%; */
+    margin: 20px;
+  }
+  #GetQiblaAutoButton {
+    width: 100%;
+    height: 50px;
+    font-size: 1.5rem;
+    margin-top: 20px;
+  }
+  .urLocation {
+    width: 100%;
+    height: 100px;
+  }
+  .qiblaInfo {
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 30px 0 0 0;
+  }
+  #map {
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
