--- a/masjidLocator.css
+++ b/masjidLocator.css
@@ -26,7 +26,7 @@ body {
   width: 18%;
   padding: 0.5rem;
   font-size: 1rem;
-  background-color: #333;
+  background-color: #4F6F52;
   color: white;
   border: none;
   cursor: pointer;
@@ -50,7 +50,7 @@ td {
   vertical-align: top;
 }
 .mosque-card {
-  background-color: #f9f9f9;
+  background-color: #9ebda1;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 1rem;
@@ -74,7 +74,7 @@ td {
   margin: 0;
 }
 .current-location {
-  background-color: #f1f1f1;
+  background-color: #719274;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 1rem;
