--- a/qfStyle.css
+++ b/qfStyle.css
@@ -43,7 +43,7 @@
   /* background-color: rgb(211, 211, 211); */
   color: #fffcfc;
   background-color: #4f6f52;
-
+  margin: 0 100px 0 0;
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
