--- a/qfStyle.css
+++ b/qfStyle.css
@@ -95,6 +95,9 @@ hr {
   .urLocation {
     width: 100%;
     height: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
   }
   .qiblaInfo {
     width: 100%;
@@ -105,7 +108,7 @@ hr {
     padding: 30px 0 0 0;
   }
   #map {
-    width: 100%;
+    width: 100vw;
     height: 300px;
     margin-top: 20px;
     margin-bottom: 20px;
