--- a/qfStyle.css
+++ b/qfStyle.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #cae5bc;
+}
+
 .container {
 }
 
@@ -26,7 +30,7 @@
 
 .qiblaInfo {
   /* float: right; */
-  padding: 20px;
+  padding: 10px;
   color: #fffcfc;
   background-color: #4f6f52;
   width: 230px;
@@ -34,6 +38,8 @@
   border-radius: 10px;
   right: 40px;
   top: 100px;
+  box-shadow: 5px 5px 10px #508255;
+  text-align: center;
 }
 
 #GetQiblaAutoButton {
@@ -47,6 +53,8 @@
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
+  transition: 0.5s;
+  box-shadow: 5px 5px 5px #4f6f52;
 }
 
 #GetQiblaAutoButton:hover {
@@ -57,8 +65,9 @@
 #map {
   height: 500px;
   width: 60vw;
+  /* box-shadow: 5px 5px 5px #4f6f52; */
 
-  margin-top: 80px;
+  margin-top: 10px;
 }
 
 .bottomContent {
@@ -101,14 +110,14 @@ hr {
   }
   .qiblaInfo {
     width: 100%;
-    height: 100px;
+    height: auto;
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
     padding: 30px;
   }
   #map {
-    width: 100vw;
+    width: auto;
     height: 300px;
     margin-top: 20px;
     margin-bottom: 20px;
