--- a/time-contnt.css
+++ b/time-contnt.css
@@ -10,7 +10,7 @@
 }
 
 .left-top1 {
-    margin-top:0;
+  margin-top: 0;
 }
 
 .middle-content hr {
@@ -21,5 +21,8 @@
 
 * {
   font-family: Arial, Helvetica, sans-serif;
-  
+}
+
+body {
+  background-color: #e8f3e2;
 }
