--- a/masjidLocator.css
+++ b/masjidLocator.css
@@ -11,6 +11,7 @@ body {
 } */
 .containers {
   padding: 1rem;
+  
 }
 .search-bar {
   display: flex;
@@ -57,6 +58,7 @@ td {
   margin-bottom: 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
+  
 }
 .mosque-card:hover {
   background-color: #f0f0f0;
@@ -79,6 +81,7 @@ td {
   border-radius: 5px;
   padding: 1rem;
   margin-bottom: 1rem;
+  box-shadow: 0 0 5px #5b7b5e;
 }
 .searchbtn{
   border-radius: 10px;
