--- a/masjidLocator.css
+++ b/masjidLocator.css
@@ -14,6 +14,9 @@ body {
   padding: 1rem;
   
 }
+.logoFoot{
+  text-align:center;
+}
 .search-bar {
   display: flex;
   justify-content: space-between;
