--- a/homepage.css
+++ b/homepage.css
@@ -5,63 +5,75 @@ html, body {
     font-family: Arial, sans-serif;
 }
 
-.carousel {
+.mySlides {
+    display: none;
+    height: 100vh;
+}
+
+img {
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slideshow-container {
     position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
 
-.carousel-inner {
-    display: flex;
-    width: 300%;
-    height: 100%;
-    transition: transform 0.3s ease-in-out;
-}
-
-.carousel-item {
-    width: 100%;
-    height: 100%;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.content {
+.text {
+    color: #f2f2f2;
+    font-size: 1vw;
+    padding: 8px 12px;
+    /* background-color: rgba(0, 0, 0, 0.5); */
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-}
-
-.title {
-    width: 50%;
+    bottom: 50%;
+    width: 100%;
     text-align: center;
-    color: whitesmoke;
-    text-shadow: 2px 2px #010101;
     opacity: 0;
-    transform: scale(0.7);
-    animation: fadeInScale 2s forwards;
+    transform: translateY(20px);
+    animation: fadeInUp 1.5s forwards;
+ 
 }
 
-@keyframes fadeInScale {
-    0% {
+
+@keyframes fadeInUp {
+    from {
         opacity: 0;
-        transform: scale(0.7);
+        transform: translateY(20px);
     }
-    100% {
+    to {
         opacity: 1;
-        transform: scale(1);
+        transform: translateY(0);
     }
+}
+
+.text h1 {
+    font-size: 4vw;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
+}
+
+@keyframes fade {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
+}
+
+@media only screen and (max-width: 300px) {
+    .text { font-size: 11px; }
 }
 
 .title h1 {
@@ -71,8 +83,7 @@ html, body {
 .title p {
     font-size: 1.5vw;
     margin-top: 2vh;
-    background-color: #010101;
-    padding: 1%;
+    
 }
 
 @media (max-width: 600px) {
