--- a/masjidLocator.css
+++ b/masjidLocator.css
@@ -52,6 +52,7 @@ td {
   margin-bottom: 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
+  height:400px;
 }
 .mosque-card:hover {
   background-color: #f0f0f0;
