--- a/qfStyle.css
+++ b/qfStyle.css
@@ -134,8 +134,8 @@ body {
 }
 .search-bar button {
   width: auto;
-  height: 4vh;
-  padding: 0 15px;
+  height: 39px;
+  padding: 0 19px;
   font-size: 1rem;
   background-color: #4f6f52;
   color: white;
