--- a/qfStyle.css
+++ b/qfStyle.css
@@ -95,7 +95,7 @@
   }
   .qiblaInfo {
     width: 100%;
-    height: 100px;
+    height: auto;
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
