--- a/prayerTime.css
+++ b/prayerTime.css
@@ -25,7 +25,7 @@ body {
 .left {
   width: 50%;
   padding: 3vw;
-  color: white;
+  /* color: white; */
   display: flex;
   align-items: center; /* Centering h1 vertically */
 }
@@ -39,12 +39,9 @@ body {
   align-items: center; /* Centering h1 vertically */
 }
 
-#time {
-  color: white; /* Ensure time is visible against the black background */
-}
 
 h1 {
-  text-shadow: 2px 2px 10px #000000;
+  /* text-shadow: 2px 2px 10px #000000;d */
 }
 
 .content {
