--- a/prayerTime.css
+++ b/prayerTime.css
@@ -39,7 +39,6 @@ body {
   align-items: center; /* Centering h1 vertically */
 }
 
-
 h1 {
   /* text-shadow: 2px 2px 10px #000000;d */
 }
@@ -178,4 +177,8 @@ td {
     max-width: none;
     width: 100%;
   }
+}
+.logoFoot {
+  display: flex;
+  justify-content: center;
 }
