settling qiblla finder

--- a/qfStyle.css
+++ b/qfStyle.css
@@ -1,7 +1,11 @@
+/* Importing Google font - Open Sans */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
 .container {
@@ -145,4 +149,9 @@
 .searchInput {
   border-radius: 5px;
   box-shadow: 0 0 3px black;
+}
+
+.navbar a {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
 }
