--- a/footerr.css
+++ b/footerr.css
@@ -1,4 +1,4 @@
-/* Importing Google font - Open Sans */
+/* Importing Google font - Open Sans YEag */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
 * {
