--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -38,7 +38,7 @@
   justify-content: center;
 }
 
-#text {
+.text {
   text-align: center;
   font-size: 20px;
   margin: 0 5vw 60px 5vw;
@@ -48,7 +48,7 @@
   margin-bottom: 20px;
 }
 
-#link {
+.link {
   color: black;
   text-decoration: none;
 }
